# dummyjson-home-work

./: .env-example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_07_11_1435-4e9ebfceea70_init.py
src/: main.py
src/api/: dep.py
src/api/v1/: api_v1.py
src/core/: database.py  db_manager.py
src/exceptions/: exceptions_http.py  exceptions_service.py
src/integrations/: dummyjson.py
src/models/: __init__.py  reports.py
src/repositories/: reports.py
src/schemas/: reports.py
src/services/: base.py  reports.py
src/tasks/: get_todos.py
src/types/: status.py
src/utils/: task_runner.py
